fix css with wrong colors

--- a/style.css
+++ b/style.css
@@ -55,10 +55,10 @@ header {
   justify-content: center;
 }
 
-.Master {
+.master-role {
   color: rgb(255, 242, 61);
 }
 
-.Player {
+.player-role {
   color: rgb(51, 255, 51);
 }
